# SnakeGame

./: .gitignore  CMakeLists.txt  main.cpp
include/: game.h  player.h
src/: game.cpp
